--- a/AddIns/Neo.AddIn.SerialPortBarcodesScanner/Neo.AddIn.SerialPortBarcodesScanner.fsproj
+++ b/AddIns/Neo.AddIn.SerialPortBarcodesScanner/Neo.AddIn.SerialPortBarcodesScanner.fsproj
@@ -79,6 +79,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /Y "$(TargetPath)" "$(SolutionDir)output\$(ConfigurationName)\AddIns\"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
