update barcodes scanner

--- a/AddIns/Neo.AddIn.SerialPortBarcodesScanner/Neo.AddIn.SerialPortBarcodesScanner.fsproj
+++ b/AddIns/Neo.AddIn.SerialPortBarcodesScanner/Neo.AddIn.SerialPortBarcodesScanner.fsproj
@@ -10,11 +10,12 @@
     <RootNamespace>Neo.AddIn.SerialPortBarcodeScanner</RootNamespace>
     <AssemblyName>Neo.AddIn.SerialPortBarcodesScanner</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.4.1.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Name>Neo.AddIn.SerialPortBarcodesScanner</Name>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,7 +55,6 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Neo.Configuration.Toml.fs" />
     <Compile Include="Neo.AddIn.SerialPortBarcodesScanner.fs" />
     <Content Include="packages.config" />
     <None Include="Honeywell.toml" />
@@ -74,6 +74,9 @@
     </Reference>
     <Reference Include="Neo.AddIn.Contracts.Barcodes">
       <HintPath>..\..\Contracts\Neo.AddIn.Contracts.Barcodes.dll</HintPath>
+    </Reference>
+    <Reference Include="Neo.Configuration.Toml">
+      <HintPath>..\..\Contracts\Neo.Configuration.Toml.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
