--- a/AddIns/Neo.AddIn.SerialPortBarcodesScanner/Neo.AddIn.SerialPortBarcodesScanner.fsproj
+++ b/AddIns/Neo.AddIn.SerialPortBarcodesScanner/Neo.AddIn.SerialPortBarcodesScanner.fsproj
@@ -56,8 +56,10 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Neo.AddIn.SerialPortBarcodesScanner.fs" />
+    <None Include="Neo.AddIn.SerialPortBarcodesScanner.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="packages.config" />
-    <None Include="Honeywell.toml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FParsec">
